--- a/bedrock/.gitignore
+++ b/bedrock/.gitignore
@@ -1,6 +1,7 @@
 # Application
 web/app/plugins/*
 !web/app/plugins/.gitkeep
+web/app/themes/
 web/app/mu-plugins/*/
 web/app/themes/twentytwentytwo/
 web/app/ai1wm-backups/*
