--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "devDependencies": {
     "sass": "^1.57.1",
     "typescript": "^4.7.3",
-    "vite": "^4.0.4"
+    "vite": "^4.0.4",
+    "vite-plugin-ejs": "^1.6.4"
   },
   "dependencies": {
     "@types/jquery": "^3.5.16",
